Bug #28839 Errors in strict mode silently stop SQL thread if --slave-skip-errors exists.

slave_sql thread calls thd->clear_error() to force error to be ignored,
though this method didn't clear thd->killed state, what causes
slave_sql thread to stop.

clear thd->killed state if we ignore an error